@@ -45,6 +45,7 @@ public final class Skills {
 		ARMOR_CRASH = 1111007,
 		SHOUT = 1111008,
 
+		HERO_GUARDIAN = 1120005,
 		HERO_MAPLE_WARRIOR = 1121000,
 		HERO_MONSTER_MAGNET = 1121001,
 		HERO_POWER_STANCE = 1121002,
@@ -67,6 +68,7 @@ public final class Skills {
 		BW_LIGHTNING_CHARGE = 1211008,
 		MAGIC_CRASH = 1211009,
 
+		PALADIN_GUARDIAN = 1220006,
 		ADVANCED_CHARGE_BLOW = 1220010,
 		PALADIN_MAPLE_WARRIOR = 1221000,
 		PALADIN_MONSTER_MAGNET = 1221001,
@@ -205,6 +207,7 @@ public final class Skills {
 		SHADOW_PARTNER = 4111002,
 		SHADOW_WEB = 4111003,
 
+		NL_SHADOW_SHIFTER = 4120002,
 		NL_NINJA_AMBUSH = 4121004,
 		VENOMOUS_STAR = 4120005,
 		NL_MAPLE_WARRIOR = 4121000,
@@ -224,6 +227,7 @@ public final class Skills {
 		MESO_GUARD = 4211005,
 		MESO_EXPLOSION = 4211006,
 
+		SHADOWER_SHADOW_SHIFTER = 4220002,
 		VENOMOUS_STAB = 4220005,
 		SHADOWER_MAPLE_WARRIOR = 4221000,
 		SHADOWER_TAUNT = 4221003,
